--- a/Latihan html1/index.html
+++ b/Latihan html1/index.html
@@ -4,7 +4,9 @@
 	<title>Janitra Yasmine Habibi</title>
 </head>
 <body>
-	<a href="https://index2.html">Riwayat Pendidikan</a>
+	<a href="https://
+janitrayasmine.github.io/Latihan CSS/index2.html
+">Riwayat Pendidikan</a>
 	<h1>Biodata Janitra Yasmine Habibi</h1>
 	<h2>Nama : Janitra Yasmine Habibi</h2>
 	<h2>Tempat Tanggal Lahir : Bogor, 31 Desember 2001</h2>
